# qexample

./: .gitignore  Cargo.toml  README.md  aad_credentials_template.json  learning_notes.odt  run_consumer.sh  run_producer.sh
dotnet_consumer/: AADCredential.cs  Program.cs  SBConsumer.cs  dotnet_consumer.csproj
rust_pc/: run_consumer.sh  run_producer.sh
rust_pc/src/: consumer.rs  main.rs  mazure.rs  producer.rs
rust_pc/src/mazure/: client_authentication.rs  opt_date_rfc2822_serialization.rs  sbclient.rs
src/: consumer.rs  main.rs  mazure.rs  messages.rs  producer.rs
src/mazure/: aadclient.rs  sbclient.rs
