[package]
name = "qexample"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
reqwest = { version = "0.11.21", features = ["gzip", "deflate", "json", "serde_json"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.4.1", features = ["getrandom", "v4", "serde"] }
